[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
duct = { workspace = true }
eyre = { workspace = true }
ureq = { workspace = true }

[workspace]
members = ["solutions/*"]

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
duct = { version = "0.13" }
eyre = { version = "0.6" }
itertools = { version = "0.12" }
ureq = { version = "2.9" }
winnow = { version = "0.5" }
