[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6" }
clap = { workspace = true }
duct = { workspace = true }
eyre = { workspace = true }
ureq = { workspace = true }

[workspace]
members = ["day_*"]

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
duct = { version = "0.13" }
eyre = { version = "0.6" }
itertools = { version = "0.12" }
num = { version = "0.4" }
rayon = { version = "1.8.0" }
strum = { version = "0.25", features = ["derive"] }
ureq = { version = "2.9" }
winnow = { version = "0.5" }
