[package]
name = "day_17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2023 = { path = ".." }
eyre = { workspace = true }
itertools = { workspace = true }
pathfinding = "4.6"
strum = { workspace = true }
tap = { workspace = true }
winnow = { workspace = true }
